[gd_scene load_steps=17 format=3 uid="uid://cflg2ypu25js2"]

[ext_resource type="Script" path="res://screens/main_menu/main_menu.gd" id="1_tf8ke"]
[ext_resource type="Texture2D" uid="uid://dwh802vf3lngr" path="res://screens/main_menu/assets/main_menu_background.png" id="2_3alm3"]
[ext_resource type="Texture2D" uid="uid://c4hw3xrpbqucb" path="res://screens/main_menu/assets/start_1.png" id="3_hstnn"]
[ext_resource type="Texture2D" uid="uid://smkbcwciaeq3" path="res://screens/main_menu/assets/right_helmet.png" id="3_kjvmy"]
[ext_resource type="Texture2D" uid="uid://don25kt5foar0" path="res://screens/main_menu/assets/right_helmet_selected.png" id="4_fk2tg"]
[ext_resource type="Script" path="res://screens/main_menu/go_to_settings_menu_button.gd" id="5_ka5us"]
[ext_resource type="Texture2D" uid="uid://3wpfovc8kdgh" path="res://screens/main_menu/assets/settings_1.png" id="5_ra82b"]
[ext_resource type="Script" path="res://global_objects/audio_players/sfx_player.gd" id="7_5jsu4"]
[ext_resource type="AudioStream" uid="uid://c23u63gja3ttj" path="res://assets/audio/sfx/buttons_sfx/click_1.mp3" id="7_c1rv0"]
[ext_resource type="Texture2D" uid="uid://1gmrkml2ov3j" path="res://screens/main_menu/assets/market_button.png" id="7_d0cx1"]
[ext_resource type="Texture2D" uid="uid://be3lbps0uppk1" path="res://screens/main_menu/assets/left_helmet.png" id="7_vbhv1"]
[ext_resource type="Texture2D" uid="uid://ce0ixkrkltojv" path="res://screens/main_menu/assets/left_helmet_selected.png" id="8_4p0ox"]
[ext_resource type="Texture2D" uid="uid://byg6o8ggvbyhn" path="res://screens/main_menu/assets/market_button_selected.png" id="8_ycnys"]
[ext_resource type="PackedScene" uid="uid://swqcdk8cggeg" path="res://screens/main_menu/user_stats_container/user_stats_container.tscn" id="9_3k1xs"]
[ext_resource type="Script" path="res://screens/main_menu/go_to_games_menu_button.gd" id="9_o3jub"]
[ext_resource type="Script" path="res://screens/main_menu/main_menu_controller.gd" id="12_dhedq"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_tf8ke")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_3alm3")

[node name="GoToSettingsMenuButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 478.0
offset_right = 1430.0
offset_bottom = 1078.0
texture_normal = ExtResource("3_kjvmy")
texture_pressed = ExtResource("4_fk2tg")
texture_hover = ExtResource("4_fk2tg")
texture_focused = ExtResource("4_fk2tg")
script = ExtResource("5_ka5us")

[node name="LabelTexture" type="TextureRect" parent="GoToSettingsMenuButton"]
layout_mode = 0
offset_left = 141.0
offset_top = 47.0
offset_right = 522.0
offset_bottom = 324.0
texture = ExtResource("5_ra82b")

[node name="GoToGamesMenuButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 417.0
offset_right = 993.0
offset_bottom = 1079.0
texture_normal = ExtResource("7_vbhv1")
texture_pressed = ExtResource("8_4p0ox")
texture_hover = ExtResource("8_4p0ox")
texture_focused = ExtResource("8_4p0ox")
script = ExtResource("9_o3jub")

[node name="LabelTexture" type="TextureRect" parent="GoToGamesMenuButton"]
layout_mode = 0
offset_left = 108.0
offset_top = 117.0
offset_right = 493.0
offset_bottom = 361.0
texture = ExtResource("3_hstnn")

[node name="GoToMarketButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_right = 287.0
offset_bottom = 168.0
texture_normal = ExtResource("7_d0cx1")
texture_pressed = ExtResource("8_ycnys")
texture_hover = ExtResource("8_ycnys")
texture_focused = ExtResource("8_ycnys")

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_c1rv0")
script = ExtResource("7_5jsu4")

[node name="UserStatsContainer" parent="." instance=ExtResource("9_3k1xs")]

[node name="MainMenuController" type="Node" parent="."]
script = ExtResource("12_dhedq")

[connection signal="pressed" from="GoToSettingsMenuButton" to="." method="_on_go_to_settings_menu_button_pressed"]
[connection signal="pressed" from="GoToGamesMenuButton" to="." method="_on_go_to_games_menu_button_pressed"]
[connection signal="pressed" from="GoToMarketButton" to="." method="_on_go_to_market_button_pressed"]
